# AlgorithmProjects

./: CompareData.xlsx  README.md
Proj1/: AvlTree.cpp  AvlTree.h  AvlTreeTest.cpp  BST.cpp  BST.h  BST_test.cpp  CMakeLists.txt  OverallTest.cpp
Proj1/AvlTree/: AvlTree.cpp  AvlTree.h
Proj1/RBT/: RBT.cpp  RBT.h  RBT_Test.cpp  RedBlackTree.cpp  RedBlackTree.h  RedBlackTreeTest.cpp
Proj1/Report/: RedBlackTree report.md  splayTree report.md
Proj1/SplayTree/: SplayTreeTest.cpp  splayTree.cpp  splayTree.h
Proj2/: README.md  pom.xml
Proj2/Report/: All report.md  DataResults.xlsx  Final report.md  binomialHeap.md  lutian.md
Proj2/src/: .gitignore
Proj2/src/main/java/algorithm/: Dijkstra.java
Proj2/src/main/java/heap/: AbstractHeap.java  BinaryHeap.java  BinomialHeap.java  FibonacciHeap.java  (+4 more)
Proj3/: CMakeLists.txt  Solution2.cpp  canPassPintia.cpp  main.cpp
Proj3/Report/: Final report.md  report guyu.md  testResults.xlsx
Proj3/Report/public/: 修订220414增资扩股协议.docx
Proj3/dataset/: data.txt  test.c
Proj3/dataset/Data/: 100.txt  1000.txt  100dense.txt  100sparse.txt  20.txt  200.txt  20sparse.txt  300.txt  30dense.txt  30sparse.txt  400.txt  40dense.txt  40sparse.txt  500.txt  50dense.txt  50sparse.txt  60.txt  60sparse.txt  70.txt  70sparse.txt
Proj3/datasets/: Here.md
Proj4/: CMakeLists.txt  HuffmanTree.cpp  HuffmanTree.h  Report.md  fuck_pta.cpp  main.cpp  result.csv  test.cpp  testData.txt
Proj8/project8/: .gitignore  input.txt  output.txt  pom.xml
Proj8/report/: report.md
splayTree src/: CMakeLists.txt  main.cpp  splayTree.cpp  splayTree.h
(+15 files in other folders)
